# varweeks_millis_clock

./: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md  cache71.txt
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/src/varweeks_millis_clock/: lib.rs.html
docs/varweeks_millis_clock/: all.html  constant._ASSERT.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.debug_write.html  fn.get_element_by_id.html  fn.set_interval.html  fn.speak_the_time.html  fn.wasm_bindgen_start.html  fn.window.html  fn.write_time_to_screen.html  index.html  sidebar-items.js
src/: lib.rs
tmp/: temp70.txt  temp71.txt
web_server_folder/varweeks_millis_clock/: index.html  manifest.json  service_worker.js
