[package]
name = "varweeks_millis_clock"
version = "2023.526.1051"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "clock with new date time units formats: varweeks and millis"
repository = "https://github.com/bestia-dev/varweeks_millis_clock"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["wasm"]
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["learning"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
varweeks_millis = "=1.0.19"
unwrap = "=1.2.1"
wasm-bindgen = { version = "=0.2.86", features = ["serde-serialize"] }
console_error_panic_hook = "=0.1.7"
js-sys = "=0.3.63"
chrono = "=0.4.24"

[dependencies.web-sys]
version = "=0.3.63"
features = [
  "AbortController",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Headers",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlHtmlElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Response",
  "Screen",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "=0.3.36"

[profile.release]
panic = "abort"
